Improved AWA* pseudocode and code.

--- a/report/main.tex
+++ b/report/main.tex
@@ -39,7 +39,7 @@
 \usepackage{float} % float images
 \usepackage{microtype} % better text formatting, avoid one word on a new line for example
 \usepackage{mathtools} % math tools
-\usepackage{amssymb} % math symbols
+\usepackage{amsmath, amssymb} % math symbols
 \usepackage{algorithm} % algorithm
 % \usepackage{algorithmic}  % old, use algorithmicx from algpseudocode
 \usepackage{algpseudocode} % pseudocode
